Updated TagController with requests/responses classes.
